--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "genkit": "^1.8.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
