--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -51,6 +50,7 @@
     "react-hook-form": "^7.52.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "resend": "^3.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
